--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "dependencies": {
     "moment": "^2.18.1",
     "mongoose": "^4.10.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-register": "^6.24.1"
   }
 }
